# specular-platform

./: .gitignore  CMakeLists.txt
dependencies/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  MitsubaDependencies.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
dependencies/cmake/: XercesCConfig.cmake  XercesCConfigInternal-relwithdebinfo.cmake  XercesCConfigInternal.cmake
dependencies/lib/: Iex-3_2.lib  IlmThread-3_2.lib  Imath-3_2.lib  OpenEXR-3_2.lib  OpenEXRCore-3_2.lib  OpenEXRUtil-3_2.lib  boost_atomic-vc142-mt-gd-x64-1_77.lib  boost_atomic-vc142-mt-x64-1_77.lib  boost_chrono-vc142-mt-gd-x64-1_77.lib  boost_chrono-vc142-mt-x64-1_77.lib  boost_container-vc142-mt-gd-x64-1_77.lib  boost_container-vc142-mt-x64-1_77.lib  boost_context-vc142-mt-gd-x64-1_77.lib  boost_context-vc142-mt-x64-1_77.lib  boost_contract-vc142-mt-gd-x64-1_77.lib  boost_contract-vc142-mt-x64-1_77.lib  boost_coroutine-vc142-mt-gd-x64-1_77.lib  boost_coroutine-vc142-mt-x64-1_77.lib  boost_date_time-vc142-mt-gd-x64-1_77.lib  boost_date_time-vc142-mt-x64-1_77.lib  boost_fiber-vc142-mt-gd-x64-1_77.lib  boost_fiber-vc142-mt-x64-1_77.lib  boost_fiber_numa-vc142-mt-gd-x64-1_77.lib  boost_fiber_numa-vc142-mt-x64-1_77.lib  boost_filesystem-vc142-mt-gd-x64-1_77.lib  boost_filesystem-vc142-mt-x64-1_77.lib  boost_graph-vc142-mt-gd-x64-1_77.lib  boost_graph-vc142-mt-x64-1_77.lib  boost_iostreams-vc142-mt-gd-x64-1_77.lib  boost_iostreams-vc142-mt-x64-1_77.lib  boost_json-vc142-mt-gd-x64-1_77.lib  (+45 more)
src/utils/: CMakeLists.txt
(+361 files in other folders)
